--- a/coords/Base.lproj/Main.storyboard
+++ b/coords/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="77C-Hi-BN2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wt1-RB-ZY8">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -91,10 +91,10 @@
             </objects>
             <point key="canvasLocation" x="920.5" y="1282.5"/>
         </scene>
-        <!--View Controller-->
+        <!--로그인-->
         <scene sceneID="GgF-6G-TYa">
             <objects>
-                <viewController id="Wt1-RB-ZY8" sceneMemberID="viewController">
+                <viewController id="Wt1-RB-ZY8" customClass="LoginViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="CaK-Ib-ZYz"/>
                         <viewControllerLayoutGuide type="bottom" id="zhJ-2P-mkU"/>
@@ -103,28 +103,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8t1-eU-3Rx">
-                                <rect key="frame" x="81" y="190" width="199" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8t1-eU-3Rx">
+                                <rect key="frame" x="20" y="191" width="335" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Wt1-RB-ZY8" id="pcA-YR-2aU"/>
+                                </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rjl-j3-OME">
-                                <rect key="frame" x="81" y="265" width="199" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rjl-j3-OME">
+                                <rect key="frame" x="20" y="266" width="335" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Wt1-RB-ZY8" id="2C9-m8-hev"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g82-EE-nIb">
-                                <rect key="frame" x="180" y="331" width="39" height="30"/>
+                                <rect key="frame" x="138" y="342" width="99" height="30"/>
                                 <state key="normal" title="로그인"/>
+                                <connections>
+                                    <action selector="loginButtonAction:" destination="Wt1-RB-ZY8" eventType="touchUpInside" id="c0c-Nw-ahd"/>
+                                    <segue destination="77C-Hi-BN2" kind="modal" identifier="MainFeedViewNavi" id="iCc-Ls-YC0"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xgt-FW-3i5"/>
+                    <navigationItem key="navigationItem" title="로그인" id="xgt-FW-3i5">
+                        <barButtonItem key="backBarButtonItem" title="뒤로" id="mkn-hK-dSr"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="emailInputLabel" destination="8t1-eU-3Rx" id="2OB-3i-Ww5"/>
+                        <outlet property="passwordInputLabel" destination="rjl-j3-OME" id="g1a-gl-P9N"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lny-ut-XL6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1716.5" y="489.5"/>
+            <point key="canvasLocation" x="1821.5" y="489.5"/>
         </scene>
         <!--Search-->
         <scene sceneID="rQ5-Gg-SsT">
@@ -137,13 +153,25 @@
                     <view key="view" contentMode="scaleToFill" id="q9B-IS-c1N">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Q0q-Mi-bFg">
+                                <rect key="frame" x="0.0" y="108" width="375" height="510"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VZV-gB-4Mv">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" id="nyT-OT-hBm"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QyS-Pv-NTB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2709.5" y="2183.5"/>
+            <point key="canvasLocation" x="2690.5" y="2178.5"/>
         </scene>
         <!--More-->
         <scene sceneID="At6-MI-Os8">
@@ -156,6 +184,23 @@
                     <view key="view" contentMode="scaleToFill" id="CGU-E3-6cO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" selectionStyle="default" indentationWidth="10" rowHeight="51" translatesAutoresizingMaskIntoConstraints="NO" id="qVJ-t4-13H">
+                                <rect key="frame" x="0.0" y="64" width="375" height="51"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qVJ-t4-13H" id="iWD-gw-Meo">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GCU-Bm-38S">
+                                            <rect key="frame" x="35" y="15" width="30" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="More" id="X6G-Ki-PhR"/>
@@ -196,18 +241,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fTK-eC-RHj">
-                                <rect key="frame" x="221" y="85" width="52" height="30"/>
+                                <rect key="frame" x="223" y="85" width="52" height="30"/>
                                 <state key="normal" title="앨범선택"/>
                                 <connections>
                                     <action selector="chooseExistingPhotoTapped:" destination="d6b-pc-LrY" eventType="touchUpInside" id="rQc-31-TA1"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sgu-12-B3i">
-                                <rect key="frame" x="44" y="175" width="299" height="284"/>
+                                <rect key="frame" x="0.0" y="128" width="375" height="403"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SSP-BW-hI2">
-                                <rect key="frame" x="133" y="85" width="52" height="30"/>
-                                <state key="normal" title="다시촬영"/>
+                                <rect key="frame" x="74" y="85" width="39" height="30"/>
+                                <state key="normal" title="카메라"/>
                                 <connections>
                                     <action selector="takePhotoTapped:" destination="d6b-pc-LrY" eventType="touchUpInside" id="aiK-8i-h5U"/>
                                 </connections>
@@ -346,7 +391,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6gO-w8-Rl5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008.5" y="1231.5"/>
+            <point key="canvasLocation" x="1982.5" y="1321.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Jh2-sB-5zY">
@@ -363,7 +408,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bua-5R-My6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1585.5" y="1231.5"/>
+            <point key="canvasLocation" x="1409.5" y="1435.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vcc-Ud-SZz">
